fix: ajustando texto

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FisioExercícios - Recuperação e Fortalecimento</title>
-    <meta name="description" content="Aplicativo de exercícios de fisioterapia para recuperação e fortalecimento" />
+    <meta name="description" content="Aplicativo de exercícios de recuperação e fortalecimento" />
   </head>
   <body>
     <div id="root"></div>
